      the ticket based on _08, which was a flaw in the Makefile.PL
      involving an always-applied -Dno_last_insert_id, but it turns out
      CHORNY had inadvertantly applied the fix in the name of DBI cleaning)
    - Starting to use Test::NoWarnings in the test scripts (ADAMK)
    - Added link to MailingList resource (ADAMK)

1.19_08 Sat  4 Apr 2009
    - Bumped minimum DBI dependency to 1.43 so last_insert_id is supported
      in DBI (ADAMK)
    - Resolved #30558: INSERT After PK Failure Also Fails Using
      Prepared (ADAMK)
    - Resolved #42567: Core dump in t/07busy.t after test 4 (mutex and/or
      memory corruption) (ADAMK)
    - Resolved #32100: t/06error.t fails using SQLite 3.5.4 (ADAMK)
    - Resolved #35904: Test failure: Bus error t/08create_function
      test (ADAMK)
    - Resolved #9792: Crashes upon re-executing a statement (ADAMK)
    - Resolved #21472: Spurious "not an error" and "bind or column index
      out of range" errors (MSERGEANT)
    - Resolved #32723: last_insert_rowid should handle sqlite_int64,
      not int (ADAMK)
    - Resolved #37215: memory leaks in sqlite_db_disconnect (ADAMK)
    - Resolved #33441: unlimited memory accumulation (ADAMK)
    - Resolved #31324: Incorrect Implementation of column names within
      sqlite_st_FETCH_attrib (ADAMK)
    - Resolved #32570: segmentation fault during tests 07 & 08 (ADAMK)
    - Resolved #41631: Dot doesn't work in quoted column aliases (ADAMK)
    - Resolved #403: test failure on "Testing select speed (large table) (ADAMK)
    - Resolved #35769: dbimp.c uses uninitialized variables. (ADAMK)
    - Resolved #27701 and #27702: (unnamed) (ADAMK)
    - Resolved #31239: prepare_cached...statement handle
      DBIx::ContextualFetch::st=HASH still Active (ADAMK)
    - Resolved #41047: Re: Bug#506157: libdbd-sqlite3-perl: unsufficient
      error message while opening database for writing (ADAMK)
    - Resolved #25196 (bug in prepare?) (ADAMK)\